# azul-scaler

./: Dockerfile  README.md  pipeline-mirror.yaml  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  tox.ini
azul_scaler/: __init__.py  burrower.py  kv.py  main.py  scaler.py  server.py  settings.py  tracker.py  types.py
azul_scaler/grpc/: externalscaler_pb2.py  externalscaler_pb2.pyi  externalscaler_pb2_grpc.py
protos/: externalscaler.proto
tests/: test_burrower.py  test_kv.py  test_scaler.py  test_tracker.py
